--- a/docs/thesis/tex/5-implementacja.tex
+++ b/docs/thesis/tex/5-implementacja.tex
@@ -14,6 +14,8 @@ Axon Framework to narzędzie do tworzenia aplikacji w architekturze opartej na z
 
 Axon Server działa jako dedykowany hub do przetwarzania komunikatów i zarządzania zdarzeniami w aplikacjach opartych na Axon Framework. Jako centralny punkt dla komunikacji opartej na zdarzeniach, Axon Server efektywnie zarządza przepływem zdarzeń, poleceń i zapytań między różnymi mikroserwisami. Działa jako serwer zdarzeń i kolejka wiadomości, które są często wykorzystywane w architekturach opartych na zdarzeniach i CQRS, wspierając skalowalność i wydajność aplikacji. Dzięki tej centralizacji, Axon Server umożliwia łatwiejsze zarządzanie, monitorowanie i optymalizację przepływu danych w aplikacjach webowych.
 
+\subsubsection{Architektura heksagonalna}
+
 \subsubsection{Podział na pakiety}
 
 TODO Wytłumaczyć czemu akurat tak podzieliłem podsekcje
@@ -32,9 +34,18 @@ TODO Wytłumaczyć czemu akurat tak podzieliłem podsekcje
 
 \subsubsection{Współdzielony kod} shared
 
-
 \subsection{Część kliencka}
 
 \subsubsection{Użyte narzędzia?}
 
 \subsubsection{Podział na katalogi}
+
+\subsubsection{Komponenty interfejsu użytkownika}
+
+\subsubsection{Komunikacja z częścią serwerową}
+
+\subsubsection{Obsługa ścieżek}
+
+\subsubsection{Współdzielony kod}
+
+\subsubsection{Przechowywanie stanu aplikacji}
