feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -1,12 +1,5 @@
 % PD1
 
-@book{martin2017,
-  author    = {Robert C. Martin},
-  title     = {Clean Architecture: A Craftsman's Guide to Software Structure and Design},
-  publisher = {Pearson},
-  year      = {2017}
-}
-
 @book{bass2012software,
   title={Software Architecture in Practice},
   author={Bass, L. and Clements, P. and Kazman, R.},
@@ -34,19 +27,9 @@
   howpublished = {Dostęp zdalny (07.06.2023): \url{https://miro.com}}
 }
 
-@misc{jvm,
-  title        = {Platforma Java Virtual Machine},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://docs.oracle.com/en/database/oracle/oracle-database/21/jjdev/Oracle-JVM-overview.html}}
-}
-
 @misc{nosql,
   title        = {Bazy danych NoSQL},
   howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.mongodb.com/nosql-explained}}
-}
-
-@misc{mongodb,
-  title        = {Baza MongoDB},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.mongodb.com/docs/manual}}
 }
 
 @misc{json,
@@ -54,94 +37,9 @@
   howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.json.org/json-en.html}}
 }
 
-@misc{react,
-  title        = {Biblioteka React},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://react.dev}}
-}
-
-@misc{remix,
-  title        = {Biblioteka Remix},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://remix.run}}
-}
-
-@misc{kotlin,
-  title        = {Język Kotlin},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://kotlinlang.org}}
-}
-
-@misc{typescript,
-  title        = {Język TypeScript},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.typescriptlang.org}}
-}
-
-@misc{docker,
-  title        = {Narzędzie Docker},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.docker.com}}
-}
-
-@misc{kubernetes,
-  title        = {Narzędzie Kubernetes},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://kubernetes.io}}
-}
-
-@misc{githubactions,
-  title        = {Platforma Github Actions},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://github.com/features/actions}}
-}
-
-@misc{prometheus,
-  title        = {Narzędzie Prometheus},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://prometheus.io}}
-}
-
-@misc{grafana,
-  title        = {Narzędzie Grafana},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://grafana.com}}
-}
-
-@misc{loki,
-  title        = {Narzędzie Loki},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://grafana.com/oss/loki}}
-}
-
-@misc{intellij,
-  title        = {IDE IntelliJ IDEA},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.jetbrains.com/idea}}
-}
-
-@misc{dockercompose,
-  title        = {Narzędzie Docker Compose},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://docs.docker.com/compose}}
-}
-
-@misc{git,
-  title        = {Narzędzie Git},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://git-scm.com}}
-}
-
-@misc{ubuntu2204,
-  title        = {System operacyjny Ubuntu 22.04},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://releases.ubuntu.com/jammy/}}
-}
-
-@misc{microk8s,
-  title        = {Klaster Kubernetes - MicroK8s},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://microk8s.io}}
-}
-
 @misc{auth0,
   title        = {Platforma Auth0},
   howpublished = {Dostęp zdalny (07.06.2023): \url{https://auth0.com}}
-}
-
-@misc{moqups,
-  title        = {Narzędzie Moqups},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://moqups.com}}
-}
-
-@misc{wireframing,
-  title        = {Technika "wireframingu"},
-  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.experienceux.co.uk/faqs/what-is-wireframing}}
 }
 
 @unpublished{boundedcontext,
@@ -150,46 +48,11 @@
   title  = {Bounded Context},
   year   = {2014}
 }
-
-@unpublished{cqrs,
-  author = {Martin Fowler},
-  note   = {Dostęp zdalny (07.06.2023): \url{https://martinfowler.com/bliki/CQRS.html}},
-  title  = {CQRS},
-  year   = {2011}
-}
-
-@unpublished{eventsourcing,
-  author = {Martin Fowler},
-  note   = {Dostęp zdalny (07.06.2023): \url{https://martinfowler.com/eaaDev/EventSourcing.html}},
-  title  = {Event Sourcing},
-  year   = {2005}
-}
-
 % SDI
 
 @misc{cap,
   title        = {Definicja twierdzenia "{CAP}"},
-  howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.scylladb.com/glossary/cap-theorem/}}
-}
-
-@misc{event_storming,
-  title        = {Strona internetowa o technice Burzy Zdarzeń},
-  howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.eventstorming.com}}
-}
-
-@misc{axon_framework,
-  title        = {Strona internetowa biblioteki Axon Framework},
-  howpublished = {Dostęp zdalny (24.11.2023): \url{https://developer.axoniq.io/axon-framework/overview}}
-}
-
-@misc{axon_server,
-  title        = {Strona internetowa programu Axon Server},
-  howpublished = {Dostęp zdalny (24.11.2023): \url{https://developer.axoniq.io/en/axon-server/overview}}
-}
-
-@misc{spring_boot,
-  title        = {Strona internetowa biblioteki Spring Boot},
-  howpublished = {Dostęp zdalny (24.11.2023): \url{https://spring.io/projects/spring-boot}}
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.scylladb.com/glossary/cap-theorem}}
 }
 
 @misc{grpc,
@@ -207,12 +70,12 @@
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://kafka.apache.org}}
 }
 
-@misc{rys1,
+@misc{microservices_rys,
   title        = {Reprezentacja graficzna systemu o architekturze mikroserwisowej},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://asseconews.pl/dlaczego-wartosc-tworzyc-aplikacje-w-architekturze-mikroserwisowej}}
 }
 
-@misc{rys2,
+@misc{cap_rys,
   title        = {Reprezentacja graficzna twierdzenia "{CAP}"},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://datascience.eu/pl/programowanie-komputerowe/twierdzenie-cap-i-rozproszone-systemy-zarzadzania-bazami-danych}}
 }
@@ -237,7 +100,7 @@
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://martinfowler.com/bliki/CQRS.html}}
 }
 
-@misc{event_sourcing,
+@misc{eventsourcing,
   title        = {Definicja wzorca Event Sourcing},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://martinfowler.com/eaaDev/EventSourcing.html}}
 }
@@ -269,5 +132,15 @@
 
 @misc{12factors,
   title        = {Strona internetowa dwunastu czynników wpływających na jakość oprogramowania},
-  howpublished = {Dostęp zdalny (06.12.2023): \url{https://12factor.net/pl/}}
+  howpublished = {Dostęp zdalny (06.12.2023): \url{https://12factor.net/pl}}
+}
+
+@misc{mailjet,
+  title        = {Strona internetowa platformy Mailjet},
+  howpublished = {Dostęp zdalny (10.12.2023): \url{https://www.mailjet.com}}
+}
+
+@misc{invoicegenerator,
+  title        = {Strona internetowa serwisu "Invoice Generator"},
+  howpublished = {Dostęp zdalny (10.12.2023): \url{https://invoice-generator.com/developers}}
 }
