--- a/docs/thesis/tex/5-implementacja.tex
+++ b/docs/thesis/tex/5-implementacja.tex
@@ -6,7 +6,7 @@
 
 \subsubsection{Użyte narzędzia?}
 
-Spring Boot to framework w ekosystemie Spring, który ułatwia tworzenie i rozwijanie aplikacji webowych oraz mikroserwisów w językach Java i Kotlin. Spring Boot oferuje wsparcie dla mikroserwisów, ułatwiając ich tworzenie, testowanie i wdrażanie, co czyni go popularnym wyborem wśród programistów pracujących nad nowoczesnymi, skalowalnymi aplikacjami.
+Spring Boot \cite{springboot} to framework w ekosystemie Spring, który ułatwia tworzenie i rozwijanie aplikacji webowych oraz mikroserwisów w językach Java i Kotlin. Spring Boot oferuje wsparcie dla mikroserwisów, ułatwiając ich tworzenie, testowanie i wdrażanie, co czyni go popularnym wyborem wśród programistów pracujących nad nowoczesnymi, skalowalnymi aplikacjami.
 
 Spring Boot ma silne powiązanie z koncepcją "cloud native", która odnosi się do projektowania aplikacji specjalnie na potrzeby chmury. Spring Boot ułatwia tworzenie aplikacji mikroserwisowych, które są nieodzownym elementem architektury cloud native, dostarczając funkcjonalności takie jak łatwa integracja z kontenerami (np. Docker), obsługa konfiguracji zewnętrznej, zarządzanie usługami przez service discovery oraz wspieranie wzorców takich jak circuit breaker. Te cechy sprawiają, że Spring Boot jest idealnym wyborem dla tworzenia aplikacji przygotowanych do działania w środowiskach chmurowych, oferujących skalowalność, elastyczność i odporność.
 
