--- a/docs/thesis/tex/5-implementacja.tex
+++ b/docs/thesis/tex/5-implementacja.tex
@@ -4,7 +4,7 @@
 
 \subsection{Część serwerowa}
 
-\subsubsection{Użyte narzędzia?}
+\subsubsection{Użyte narzędzia}
 
 Spring Boot \cite{springboot} to framework w ekosystemie Spring, który ułatwia tworzenie i rozwijanie aplikacji webowych oraz mikroserwisów w językach Java i Kotlin. Spring Boot oferuje wsparcie dla mikroserwisów, ułatwiając ich tworzenie, testowanie i wdrażanie, co czyni go popularnym wyborem wśród programistów pracujących nad nowoczesnymi, skalowalnymi aplikacjami.
 
@@ -17,8 +17,6 @@ Axon Server działa jako dedykowany hub do przetwarzania komunikatów i zarządz
 \subsubsection{Architektura heksagonalna}
 
 \subsubsection{Podział na pakiety}
-
-TODO Wytłumaczyć czemu akurat tak podzieliłem podsekcje
 
 \subsubsection{Warstwa adapterów wejściowych} adapter/in
 
@@ -36,7 +34,7 @@ TODO Wytłumaczyć czemu akurat tak podzieliłem podsekcje
 
 \subsection{Część kliencka}
 
-\subsubsection{Użyte narzędzia?}
+\subsubsection{Użyte narzędzia}
 
 \subsubsection{Podział na katalogi}
 
